Fix Flutter Localization and Add Two-Step Verification
Enhanced app with comprehensive improvements:

1. Fixed localization issues across multiple screens:
   - Added missing localization keys for Claim Attachment, Review, Confirmation screens
   - Added complete set of Quick Claim localization keys with descriptions
   - Added Polish translations for all new keys
   - Renamed keys to avoid Dart reserved keywords (continue → continueAction)
   - Fixed import paths for AppLocalizations to use custom l10n2 directory
   - Regenerated localization files successfully

2. Fixed email loading in Claim Confirmation screen:
   - Added robust null checks and fallback defaults for emails
   - Improved airline IATA code extraction and email retrieval
   - Added debug prints for tracing issues
   - Ensured fallback airline email is used when needed

3. Added two-step verification for claim submission:
   - Created review and confirmation step in claim process
   - Added user-friendly confirmation UI with claim details display
   - Implemented back button to allow users to edit information
   - Added proper validation before final submission
   - Added new localization keys for the verification process

--- a/lib/l10n2/app_fr.arb
+++ b/lib/l10n2/app_fr.arb
@@ -179,6 +179,18 @@
   "delayedEligible": "Retardé et potentiellement éligible",
   "startClaim": "Commencer la Réclamation",
   "euWideEligibleFlights": "Vols Éligibles à l'Indemnisation à l'échelle de l'UE",
+  "claimNotFound": "Réclamation introuvable",
+  "@claimNotFound": {
+    "description": "Titre affiché lorsqu'une réclamation est introuvable."
+  },
+  "claimNotFoundDesc": "La réclamation demandée est introuvable. Elle a peut-être été supprimée.",
+  "@claimNotFoundDesc": {
+    "description": "Description affichée lorsqu'une réclamation est introuvable."
+  },
+  "backToDashboard": "Retour au tableau de bord",
+  "@backToDashboard": {
+    "description": "Libellé du bouton pour revenir au tableau de bord."
+  },
   "requiredFieldsCompleted": "Tous les champs requis sont remplis.",
   "scanningDocumentsNote": "La numérisation de documents peut pré-remplir certains champs.",
   "tipCheckEligibility": "• Assurez-vous que votre vol est éligible à une indemnisation (par ex. retard >3h, annulation, refus d'embarquement).",
@@ -205,5 +217,16 @@
   "errorConnectionFailed": "Échec de la connexion. Veuillez vérifier votre réseau.",
   "@errorConnectionFailed": {
     "description": "Message d'erreur lorsqu'une connexion réseau échoue"
+  },
+  "@forcingFreshDataLoad": {
+    "description": "Message de snackbar lorsqu'une nouvelle mise à jour des données est forcée"
+  },
+  "checkAgain": "Vérifier à nouveau",
+  "@checkAgain": {
+    "description": "Libellé du bouton pour revérifier ou récupérer les vols"
+  },
+  "euWideCompensationEligibleFlights": "Vols éligibles à la compensation européenne",
+  "@euWideCompensationEligibleFlights": {
+    "description": "Titre de l'écran/section listant les vols éligibles à la compensation européenne"
   }
 }
