Fix airline claim email routing and improve error handling
- Fixed flight number parsing to properly extract airline IATA codes from various formats
- Added support for airline codes containing both letters and numbers (like G3 for GOL)
- Changed default email behavior to use user's email as fallback instead of Lufthansa
- Added missing airlines to database: Air Austral (UU), Icelandair (FI), EasyJet (U2),
  WestJet (WS), GOL (G3), Air Mauritius (MK), Kenya Airways (KQ), and Aeromexico (AM)
- Added detailed logging throughout the airline matching process for better debugging
- Improved error handling to ensure claims are always sent to a valid destination
- Fixed import issues in claim_review_screen.dart
- Made the system more resilient by using user's email when airline can't be determined

This approach ensures that claims will never be lost due to incorrect email routing.
If the airline can't be determined, the claim is sent to the user who can then
manually forward it to the correct airline.

--- a/lib/l10n2/app_en.arb
+++ b/lib/l10n2/app_en.arb
@@ -786,6 +786,11 @@
     "description": "Button label to proceed to attachments screen"
   },
 
+  "continueToReview": "Continue to Review",
+  "@continueToReview": {
+    "description": "Button label to proceed to review screen"
+  },
+
   "country": "Country",
   "@country": {
     "description": "Label for country field"
