Fix airline email routing and add localization for email and attachment UI elements
1. Improved flight number parsing with direct IATA code matching from airline database
2. Added handling for complex airline codes containing letters and numbers (G3, U2, etc.)
3. Changed default fallback from Lufthansa email to user's email
4. Added missing airlines to airline_claim_procedures.json (EasyJet, WestJet, Gol, etc.)
5. Fully localized UI elements related to email and attachments in Polish and English
   - 'Preview Email' button
   - PDF preview messages
   - Document deletion dialog and messages
   - Download PDF button

--- a/lib/l10n2/app_en.arb
+++ b/lib/l10n2/app_en.arb
@@ -946,6 +946,51 @@
     "description": "Label for claim attachment item"
   },
 
+  "previewEmail": "Preview Email",
+  "@previewEmail": {
+    "description": "Label for button to preview email"
+  },
+
+  "pdfPreviewMessage": "PDF preview would be shown here.",
+  "@pdfPreviewMessage": {
+    "description": "Message shown in place of PDF preview"
+  },
+
+  "downloadPdf": "Download PDF",
+  "@downloadPdf": {
+    "description": "Label for button to download PDF"
+  },
+
+  "filePreviewNotAvailable": "File preview not available",
+  "@filePreviewNotAvailable": {
+    "description": "Message shown when file preview is not available"
+  },
+
+  "deleteDocument": "Delete Document",
+  "@deleteDocument": {
+    "description": "Title for document deletion confirmation dialog"
+  },
+
+  "deleteDocumentConfirmation": "Are you sure you want to delete this document?",
+  "@deleteDocumentConfirmation": {
+    "description": "Confirmation message for document deletion"
+  },
+
+  "delete": "Delete",
+  "@delete": {
+    "description": "Label for delete button"
+  },
+
+  "documentDeletedSuccess": "Document deleted successfully",
+  "@documentDeletedSuccess": {
+    "description": "Success message after document deletion"
+  },
+
+  "documentDeleteFailed": "Failed to delete document",
+  "@documentDeleteFailed": {
+    "description": "Error message when document deletion fails"
+  },
+
   "other": "other",
   "@other": {
     "description": "The label for the 'other' document type."
